# value_encoder

./: .clang-format  .gitignore  .travis.yml  pyproject.toml  setup.cfg  setup.py
src/: module.cpp
tests/: __init__.py
value_encoder-stubs/: __init__.pyi
