[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pybind11>=2.6.1",
]

build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120
