[project]
name = "value_encoder"
version = "0.0.2"
description = "Value encoder"
authors = [{name = "Hui Peng Hu", email = "woohp135@gmail.com"}]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "black",
    "isort"
]

[tool.setuptools]
packages = ["value_encoder-stubs"]

[tool.setuptools.package-data]
"*" = ["*.pyi"]

[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pybind11>=2.6.1",
]

build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120
